Autherization Fully Added